# ircbot

./: Cargo.toml
src/: irc.rs  main.rs  message.rs
src/biba/: mod.rs  settings.rs
src/irc/: .keys.rs.swp  .mod.rs.swp  keys.rs  mod.rs
