[package]

name = "twodeltabot"
version = "0.0.1"
authors = ["Mamacos <dainem@amazon.com>"]

[dependencies.stem]
git = "https://github.com/mrordinaire/rust-stem"

[dependencies.nlp]
git = "https://github.com/Freyskeyd/nlp"

[dependencies]
curl = "0.3.0"
websocket = "0.17.1"
openssl = "0.7.13"
env_logger = "0.3.3"
log = "0.3.6"
